--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
   font-size: 12pt;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1200px) {
   .sticky {
     position: sticky;
     top: 0px;
@@ -21,7 +21,7 @@ body {
   overflow: scroll;
 }
 
-div.container {
+div.mycontainer {
   display: block;
   padding: 0px;
   border: 0px;
@@ -111,9 +111,13 @@ div.char,
 .button,
 .buttons div.filter {
   overflow: hidden;
-  max-height: 64px;
+  max-height: 70px;
   padding: 2px 6px 2px 6px;
   text-align: center;
+}
+
+.filters .figure {
+  zoom: 0.9;
 }
 
 div.filter span {
@@ -123,7 +127,7 @@ div.filter span {
 
 div.filter {
   padding: 0px;
-  font-size: 20px;
+  font-size: 18px;
   /*margin: 2px;*/
   background-color: #ddd;
 }
