Fix isos2, some data fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+table.level1 .filter.level2,
+table.level1 .filter.level3,
+table.level2 .filter.level3 {
+  display: none;
+}
+
 .error {
   color: red;
   font-size: 12pt;
