--- a/css/styles.css
+++ b/css/styles.css
@@ -8,10 +8,10 @@ select.form-control {
   margin: 5px;
   display: inline-block;
   overflow: hidden;
-  max-height: 70px;
+  max-height: 100px;
   text-align: center;
   border-radius: 4px;
-  border: 2px solid #555;
+  /*border: 2px solid #555;*/
   background-color: #ddd;
 }
 
@@ -123,7 +123,7 @@ div.mycontainer {
 
 div.char {
   background-color: white;
-  margin: 5px;
+  margin: 2px;
   font-size: 30px;
   /*letter-spacing: 10px;*/
   text-align: center;
