--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ tbody.customFilters tr:nth-child(2n) > *:nth-child(2n) {
 tbody.customFilters tr:nth-child(2n) > *:nth-child(2n + 1) {
   background-color: #888;
 }
+
 tbody.customFilters div.isos,
 tbody.customFilters tr.isos td {
   max-width: 100px;
@@ -17,6 +18,20 @@ tbody.customFilters tr.isos td {
   overflow: hidden;
   text-overflow: ellipsis;
   user-select: all;
+}
+tbody.customFilters .customFilter div.isos {
+  position: absolute;
+  margin-top: 5px;
+  margin-left: -5px;
+  font-size: 8pt;
+  width: 50px;
+}
+tbody.customFilters .customFilter .file {
+  position: absolute;
+  margin-top: -12px;
+  margin-left: -16px;
+  opacity: 0.9;
+  font-size: 10pt;
 }
 
 tbody.customFilters th {
@@ -28,6 +43,7 @@ tbody.customFilters th {
 }
 tbody.customFilters td {
   text-align: center;
+  white-space: nowrap;
 }
 
 select.form-control {
