Image tile optimization

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+img.tile {
+  background-image: url(../images/tiles.png);
+  background-size: 480px;
+}
+
 tbody.customFilters tr:nth-child(2n + 1) > *:nth-child(2n) {
   background-color: #aaa;
 }
