--- a/css/flag-icon.custom.css
+++ b/css/flag-icon.custom.css
@@ -16,6 +16,11 @@ td > .flag-icon ng-include svg {
   background-image: url(../flags/4x3/kg_.svg);
 }
 
+.flag-icon {
+  background-image: url(../flags/flags.png);
+  background-size: 500px;
+}
+
 /*
 .flag-icon-ae,
 .flag-icon-at,
@@ -51,10 +56,6 @@ td > .flag-icon ng-include svg {
 .flag-icon-ru,
 .flag-icon-th,
 .flag-icon-ua {
-  background-image: none;
-}
-
-.flag-icon {
   background-image: none;
 }
 
